# avatar-mcp

./: .gitignore  README.md  config.toml  pyproject.toml
.github/workflows/: ci.yml
scripts/: auto_speak.py
sprites/: generate_frieren.py  process_sprites.py
src/avatar_mcp/: __init__.py  config.py  lifecycle.py  server.py  state.py
src/avatar_mcp/avatar/: display.py
src/avatar_mcp/input/: sender.py
src/avatar_mcp/voice/: audio.py  emotions.py  stt.py  stt_base.py  stt_google.py  stt_realtime.py  tts_edge.py  tts_eleven.py  tts_kokoro.py
src/claude_avatar/: __init__.py  config.py  lifecycle.py  server.py
src/claude_avatar/avatar/: animations.py  display.py  sprites.py
src/claude_avatar/input/: sender.py
src/claude_avatar/voice/: audio.py  stt.py  tts_base.py  tts_edge.py  tts_eleven.py
tests/: conftest.py  test_auto_speak.py  test_avatar_standalone.py  test_config.py  test_emotions.py  test_lifecycle.py  test_process_cleanup.py  test_sprites.py  test_state.py  test_stt.py  test_tts.py
